--- a/templates/users.html
+++ b/templates/users.html
@@ -45,17 +45,17 @@
             </tr>
         </thead>
         <tbody id="userTableBody">
-            <!-- Users will be inserted here -->
+            
         </tbody>
     </table>
 
     <script>
         function fetchUsers() {
-            fetch("http://127.0.0.1:5000/users")
+            fetch("http://127.0.0.1:8080/users")
                 .then(response => response.json())
                 .then(data => {
                     const userTableBody = document.getElementById("userTableBody");
-                    userTableBody.innerHTML = ""; // Clear previous content
+                    userTableBody.innerHTML = ""; 
 
                     data.users.forEach(user => {
                         const row = `<tr>
@@ -70,7 +70,7 @@
                 .catch(error => console.error("Error fetching users:", error));
         }
 
-        window.onload = fetchUsers; // Fetch users when the page loads
+        window.onload = fetchUsers;
     </script>
 
 </body>
