--- a/templates/deleteuser.html
+++ b/templates/deleteuser.html
@@ -60,6 +60,26 @@
             margin-right: auto;
             border-radius: 6px;
         }
+         /* Mobile Optimization */
+         @media screen and (max-width: 600px) {
+            .container {
+                width:80%;
+                height: auto;
+                padding: 15px;
+                margin-top: 20px;
+            }
+
+            input {
+                font-size: 14px;
+                padding: 5px;
+            }
+
+            .btn {
+                height: 35px;
+                font-size: 14px;
+                color:black;
+            }
+        }
     </style>
 </head>
 
