--- a/templates/login.html
+++ b/templates/login.html
@@ -87,6 +87,26 @@
                 transform: rotate(360deg);
             }
         }
+        /* Mobile Optimization */
+        @media screen and (max-width: 600px) {
+            .container {
+                width:80%;
+                height: auto;
+                padding: 15px;
+                margin-top: 20px;
+            }
+
+            input {
+                font-size: 14px;
+                padding: 5px;
+            }
+
+            .btn {
+                height: 35px;
+                font-size: 14px;
+                color:black;
+            }
+        }
     </style>
 </head>
 
