--- a/templates/verify_otp.html
+++ b/templates/verify_otp.html
@@ -94,6 +94,46 @@
                 transform: rotate(360deg);
             }
         }
+           /* Mobile Optimization */
+        @media screen and (max-width: 600px) {
+            .card {
+                width:80%;
+                height: auto;
+                padding: 15px;
+                margin-top: 20px;
+            }
+
+            input {
+                font-size: 14px;
+                padding: 5px;
+            }
+
+            .btn {
+                height: 35px;
+                font-size: 14px;
+                color:black;
+            }
+        }
+           /* Mobile Optimization */
+           @media screen and (max-width: 600px) {
+            .card {
+                width:80%;
+                height: auto;
+                padding: 15px;
+                margin-top: 20px;
+            }
+
+            input {
+                font-size: 14px;
+                padding: 5px;
+            }
+
+            .btn {
+                height: 35px;
+                font-size: 14px;
+                color:black;
+            }
+        }
     </style>
     <script>
         async function verifyOTP() {
